Fixed resume tabs overlapping search modal

--- a/src/index.scss
+++ b/src/index.scss
@@ -324,7 +324,7 @@ iframe.playlist-item {
 // Sticky header
 .sticky-header {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-  z-index: 10000;
+  z-index: 39;
   background-color: $black;
 }
 
